Changelog
=========

4.22-dev - (unreleased)
-----------------------
 * Bug fix: Make it possible to add new Plone Sites within EEA Data.fs or on a
   fresh new one
   [voineali refs #5145]
 * Change: removed jsdisable condition from js resources
   [szabozo0 #5095]

4.21 - (2012-04-26)
-------------------
 * Bug fix: now all objects that are copied have their creation
   date set to now() [tiberich #4402]
 * Feature: use fake_transition in eea_data_workflow [tiberich #5065]
 * Bug fix: Added plone.app.caching rules for DavizVisualization,
   Sparql and SparqlBookmarkFolder
   [voineali #5074]
 * Upgrade step: Remove 'sparql-download' from:
   Site Setup > Caching > Caching operations > Templates
   [voineali #5074]

4.20 - (2012-03-30)
-------------------
 * Bug fix: patched plone.app.discussion ver 2.0.10, not to fail on migrate workflows
   when "Discussion Item" has no workflow assigned
   [ghicaale #5041]
 * Bug fix: fixed "content rules" redirects under control panel
   [ghicaale]
 * Bug fix: flush collective.indexing process queue in searchResults monkey patch
   [tiberich #5033]
 * Bug fix: patched plone.app.kss not silently fails and to display a
   progress info on state change
   [ghicaale #5017]
 * Bug fix: patched plone.app.redirector to also redirect direct file download
   links (e.g. at_download/fileField) when the containing object defines an alias
   [ghicaale]

4.19 - (2012-03-06)
-------------------
 * Change: remove code that checks for IEEAPloneSite when saving disk resources
   [tiberich]

4.18 - (2012-03-05)
-------------------
 * Upgrade step: dascalu + tiberich: install eea.munin on ape, link
   its plugins into the ape munin [tiberich #4955]
 * Upgrade step: dascalu + tiberich: on each squirrel, install the
   plugins in munin-scripts in munin [tiberich #4955]
 * Bug fix: Updated collective.quickupload patch according with the latest
   changes
   [voineali #4965]
 * Bug Fix: updated all xlsx and docx to new mime type. [demarant #4957]